--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -12,7 +12,7 @@
    <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
-            <Button fx:id="sellButton" mnemonicParsing="false" text="Sell an item" />
+            <Button onAction="#switchToSellView" fx:id="sellButton" mnemonicParsing="false" text="Sell an item" />
             <Button mnemonicParsing="false" text="Wish for an item" />
             <MenuButton mnemonicParsing="false" text="Account">
               <items>
