--- a/src/networkMarket/client/views/sellView.fxml
+++ b/src/networkMarket/client/views/sellView.fxml
@@ -47,7 +47,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button fx:id="sellButton" mnemonicParsing="false" text="Sell item" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+      <Button onAction="#sell" mnemonicParsing="false" text="Sell item" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
