--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane fx:controller="networkMarket.client.controllers.StoreController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
+    <!-- TODO create a view for the products -->
+    <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
             <Button onAction="#switchToSellView" fx:id="sellButton" mnemonicParsing="false" text="Sell an item" />
