--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -8,12 +8,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="networkMarket.client.controllers.StoreController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="networkMarket.client.controllers.StoreController">
     <top>
       <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <items>
             <Button fx:id="sellButton" mnemonicParsing="false" onAction="#switchToSellView" text="Sell an item" />
-            <Button mnemonicParsing="false" text="Wish for an item" />
+            <Button fx:id="wishButton" mnemonicParsing="false" text="Wish for an item" />
+            <Button onAction="#updateView" mnemonicParsing="false" text="UpdateView" />
             <MenuButton mnemonicParsing="false" text="Account">
               <items>
                 <MenuItem mnemonicParsing="false" text="unregister" />
