--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Text?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="networkMarket.client.controllers.StoreController">
@@ -10,13 +15,14 @@
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <Button fx:id="sellButton" mnemonicParsing="false" onAction="#switchToSellView" text="Sell an item"/>
-                <Button onAction="#switchToWishView" fx:id="wishButton" mnemonicParsing="false"
+                <Button fx:id="wishButton" mnemonicParsing="false" onAction="#switchToWishView"
                         text="Wish for an item"/>
-                <Button onAction="#updateView" mnemonicParsing="false" text="UpdateView"/>
+                <Button mnemonicParsing="false" onAction="#updateView" text="UpdateView"/>
                 <MenuButton fx:id="accountMenu" mnemonicParsing="false" text="Account">
                     <items>
-                        <MenuItem onAction="#unregister" mnemonicParsing="false" text="unregister"/>
-                        <MenuItem onAction="#logout" mnemonicParsing="false" text="log out"/>
+                        <MenuItem mnemonicParsing="false" onAction="#switchToDepositToBankView" text="getSomeCash"/>
+                        <MenuItem mnemonicParsing="false" onAction="#unregister" text="unregister"/>
+                        <MenuItem mnemonicParsing="false" onAction="#logout" text="log out"/>
                     </items>
                 </MenuButton>
             </items>
