--- a/src/networkMarket/client/views/myItemsView.fxml
+++ b/src/networkMarket/client/views/myItemsView.fxml
@@ -16,19 +16,19 @@
             <tabs>
                 <Tab text="My Sold Items">
                     <content>
-                        <ListView prefHeight="200.0" prefWidth="200.0"/>
+                        <ListView fx:id="soldItemList" prefHeight="200.0" prefWidth="200.0"/>
                     </content>
                 </Tab>
                 <Tab text="My Bought Items">
                     <content>
-                        <ListView prefHeight="200.0" prefWidth="200.0"/>
+                        <ListView fx:id="boughtItemList" prefHeight="200.0" prefWidth="200.0"/>
                     </content>
                 </Tab>
             </tabs>
         </TabPane>
     </center>
     <bottom>
-        <Button fx:id="backButton" mnemonicParsing="false" text="Back" BorderPane.alignment="CENTER">
+        <Button onAction="#back" fx:id="backButton" mnemonicParsing="false" text="Back" BorderPane.alignment="CENTER">
             <BorderPane.margin>
                 <Insets bottom="20.0"/>
             </BorderPane.margin>
