--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -15,7 +15,7 @@
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <Button fx:id="sellButton" mnemonicParsing="false" onAction="#switchToSellView" text="Sell an item"/>
-                <Button fx:id="wishButton" mnemonicParsing="false" onAction="#switchToWishView"
+                <Button fx:id="wishButton" mnemonicParsing="false" onAction="#switchToMyItemsView"
                         text="Wish for an item"/>
                 <Button mnemonicParsing="false" onAction="#updateView" text="UpdateView"/>
                 <MenuButton fx:id="accountMenu" mnemonicParsing="false" text="Account">
