--- a/src/networkMarket/client/views/storeView.fxml
+++ b/src/networkMarket/client/views/storeView.fxml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Text?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="networkMarket.client.controllers.StoreController">
@@ -16,7 +11,7 @@
             <items>
                 <Button fx:id="sellButton" mnemonicParsing="false" onAction="#switchToSellView" text="Sell an item"/>
                 <Button fx:id="wishButton" mnemonicParsing="false" onAction="#switchToMyItemsView"
-                        text="My Items"/>
+                        text="My Items      "/>
                 <Button mnemonicParsing="false" onAction="#updateView" text="UpdateView"/>
                 <MenuButton fx:id="accountMenu" mnemonicParsing="false" text="Account">
                     <items>
